Update field structures for user pages

--- a/views/fields/sub/checkbox.tt
+++ b/views/fields/sub/checkbox.tt
@@ -1,14 +1,15 @@
 <div class="checkbox">
   <input
-    id="[% id %]"
+    id="[%- id -%]"
     type="checkbox"
-    name="[% name %]"
-    class="[% IF checked %]remember--checked[% END %] visually-hidden-opacity"
-    [% IF checked %]checked="checked"[% END %]
-    [% IF tabindex %]tabindex="[% tabindex %]"[% END %]
-    [% IF is_disabled %]disabled[% END %]
+    name="[%- name -%]"
+    [%- IF value -%]value="[%- value -%]"[%- END -%]
+    class="[%- IF checked -%]remember--checked[%- END -%] visually-hidden-opacity"
+    [%- IF checked -%]checked="checked"[%- END -%]
+    [%- IF tabindex -%]tabindex="[%- tabindex -%]"[%- END -%]
+    [%- IF is_disabled -%]disabled[%- END -%]
   >
-  <label for="[% id %]">
-    [% IF is_html; label | html; ELSE; label; END; %]
+  <label for="[%- id -%]">
+    [%- IF is_html; label | html; ELSE; label; END; -%]
   </label>
 </div>
