--- a/views/fields/input.tt
+++ b/views/fields/input.tt
@@ -1,4 +1,4 @@
-[%
+[%-
   # Template for standardized <input> fields
   # Implementation Example:
   #
@@ -11,7 +11,7 @@
   #   type = "email"
   #   custom_classes = ""
   #   input_class = "input--required"
-  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   popover_body="this is a popover, that is displayed when the info icon is pressed"
   #   is_required = 0
   #   is_html = 0
   #   tabindex = 1
@@ -25,7 +25,7 @@
   #   };
 
   input_class = is_required AND ! input_class.match('input--required') ? input_class _ ' input--required' : input_class;
-%]
+-%]
 [% IF ! hide_group %]
 <div class="form-group">
 [% END %]
@@ -34,7 +34,7 @@
       <label for="[% id %]">
         [% IF is_html; label | html; ELSE; label; END; %]
       </label>
-      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
     </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
