--- a/views/fields/password.tt
+++ b/views/fields/password.tt
@@ -11,7 +11,7 @@
   #   type = "password"
   #   custom_classes = ""
   #   input_class = "input--password"
-  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   popover_body="this is a popover, that is displayed when the info icon is pressed"
   #   is_required = 0
   #   is_html = 0
   #   tabindex = 3
@@ -31,7 +31,7 @@
       <label for="[% id %]">
         [% IF is_html; label | html; ELSE; label; END; %]
       </label>
-      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
     </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
