--- a/views/fields/select.tt
+++ b/views/fields/select.tt
@@ -11,7 +11,7 @@
   #   help_text = site.register_organisation_help
   #   items = organisations
   #   input_class = "input--required"
-  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   popover_body="this is a popover, that is displayed when the info icon is pressed"
   #   is_required = 0
   #   is_html = 0
   #   sub_field = ""
@@ -39,7 +39,7 @@
       <label for="[% id %]" id="[% id %]-label">
         [% IF is_html; label | html; ELSE; label; END; %]
       </label>
-      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
     </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
@@ -58,7 +58,13 @@
     >
       <span>[% IF is_html; display_placeholder | html; ELSE; display_placeholder; END; %]</span>
     </button>
-    <input type="hidden" name="[% name %]" value="[% display_value %]"[% IF is_disabled %] disabled[% END %]>
+    <input
+      type="hidden"
+      name="[% name %]"
+      value="[% display_value %]"[%- IF is_disabled -%]
+      disabled[%- END -%]
+      placeholder="[% IF is_html; display_placeholder | html; ELSE; display_placeholder; END; %]"
+    >
     
     <ul
       class="select__menu dropdown-menu"
@@ -67,15 +73,8 @@
       role="listbox"
     >
       [% FOREACH item IN items %]
-      <li class="select__menu-item" role="option"[% IF value == item.id %] aria-selected="true"[% END %]>
-        <a
-          class="select__link[% IF value == item.id %] select__link--active[% END %]"
-          href="#"
-          onclick="return false;"
-          data-id="[% item.id %]"
-        >
-          [% item.name | html_entity %]
-        </a>
+      <li class="select__menu-item" role="option" data-value="[% item.id %]" aria-selected="[% IF value == item.id %]true[% ELSE %]false[% END %]">
+        [% item.name | html_entity %]
       </li>
       [% END %]
     </ul>
