--- a/views/fields/textarea.tt
+++ b/views/fields/textarea.tt
@@ -12,7 +12,7 @@
   #   custom_classes = ""
   #   help_text = site.register_notes_help
   #   input_class = "input--required"
-  #   popover_info="this is a popover, that is displayed when the info icon is pressed"
+  #   popover_body="this is a popover, that is displayed when the info icon is pressed"
   #   is_required = 0
   #   is_html = 1
   #   rows = 5
@@ -30,7 +30,7 @@
       <label for="[% id %]">
         [% IF is_html; label | html; ELSE; label; END; %]
       </label>
-      [% IF popover_info; INCLUDE fields/sub/popover.tt popover_id=id popover_info=popover_info; END; %]
+      [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
     </div>
     [% IF help_text %]
     <p id="[% id %]-help" class="form-text">
