Add user pages: - my account - user overview - user account requests - user edit - user upload - user export

--- a/views/layouts/content_with_menu.tt
+++ b/views/layouts/content_with_menu.tt
@@ -1,5 +1,5 @@
 <div class="row flex-nowrap">
-  [% PROCESS snippets/navigation.tt %]
+  [% PROCESS navigation/main_menu.tt %]
   <main class="[% main_class %]">
     <div class="main__container">
       [%
