--- a/views/tables/basic_cell_text.tt
+++ b/views/tables/basic_cell_text.tt
@@ -1,6 +1,17 @@
 [%
-  cell_class = class ? 'class="' _ class _ '"' : '';
+  cell_class = class ? ' class="' _ class _ '"' : '';
+  field_value = field_name AND field_value ? field_value : label;
+  data_attr  = field_name ? ' data-' _ field_name _ '="' _ field_value _ '"' : '';
 %]
-<td [% cell_class %]>
-  [% label %]
+<td [% cell_class %][% data_attr %]>
+  [%-
+      SWITCH filter;
+        CASE 'html';
+          label | html;
+        CASE 'html_entity';
+          label | html_entity;
+        CASE DEFAULT;
+          label;
+      END;
+    -%]
 </td>
