--- a/views/tables/basic_row.tt
+++ b/views/tables/basic_row.tt
@@ -6,13 +6,41 @@
     FOREACH field in row.fields;
       SWITCH field.type;
         CASE 'link';
-          INCLUDE tables/basic_cell_link.tt class=field.class label=field.label link=field.link;
+          INCLUDE tables/basic_cell_link.tt
+            class=field.class
+            link_class=field.link_class
+            label=field.label
+            link=field.link
+            filter=field.filter
+            field_name=field.name;
         CASE 'button';
-          INCLUDE tables/basic_cell_button.tt class=field.class label=field.label link=field.link;
+          INCLUDE tables/basic_cell_button.tt
+            class=field.class
+            label=field.label
+            link=field.link
+            filter=field.filter
+            field_name=field.name;
+        CASE 'modal_button';
+          INCLUDE tables/basic_cell_modal_button.tt
+            class=field.class
+            label=field.label
+            filter=field.filter
+            field_name=field.name
+            modalID=field.modalID
+            dataTitle=field.dataTitle
+            dataID=field.dataID;
         CASE 'header';
-          INCLUDE tables/basic_cell_header.tt class=field.class label=field.label;
+          INCLUDE tables/basic_cell_header.tt
+            class=field.class
+            label=field.label
+            filter=field.filter
+            field_name=field.name;
         CASE DEFAULT;
-          INCLUDE tables/basic_cell_text.tt class=field.class label=field.label;
+          INCLUDE tables/basic_cell_text.tt
+            class=field.class
+            label=field.label
+            filter=field.filter
+            field_name=field.name;
       END;
     END;
   %]
