--- a/views/tables/basic_table.tt
+++ b/views/tables/basic_table.tt
@@ -1,6 +1,6 @@
 [%
   tmplColumnConfig = '{_NAME_ORDERABLE_CLASSNAME_WIDTH},';
-  tmplColumnButtonConfig = '{"name":"","orderable":false,"className":"min-tablet-l"},';
+  tmplColumnButtonConfig = '{"name":"","orderable":false,"className":"min-tablet-l data-table__header--invisible"},';
 
   columnConfig = '';
   buttonConfig = '';
@@ -20,8 +20,9 @@
     columnConfig = columnConfig _ rowField;
 
     header_row.fields.push({
-      type  = "header"
-      label = column.label || column.name || ''
+      type   = "header"
+      label  = column.label || column.name || ''
+      filter = column.filter || ''
     });
   END;
 
@@ -29,23 +30,33 @@
     # create table columns and column config for each button
     FOREACH button in table_buttons;
       buttonConfig = buttonConfig _ tmplColumnButtonConfig;
-      header_row.fields.push({type  = "header"});
+      header_row.fields.push({
+        type  = "header"
+        label = button.label
+      });
     END;
     
     # add buttons to each row
     FOREACH row in rows;
       FOREACH button in table_buttons;
         row.fields.push({
-          type  = "button"
-          label = button.label
-          link  = button.link
+          type      = button.type || "button"
+          label     = button.label
+          link      = button.link || ''
+          filter    = button.filter || ''
+          modalID   = button.modalID || ''
+          dataTitle = row.modal.dataTitle || ''
+          dataID    = row.modal.dataID || ''
         });
       END;
     END;
   END;
   
-  # add empty column for screen overflow expand/collapse column
-  header_row.fields.push({type = "header"});
+  # add column for screen overflow expand/collapse column
+  header_row.fields.push({
+    type = "header"
+    label = "Toggle child row"
+  });
 
   FOREACH row in rows;
     # replace link placeholders
@@ -61,9 +72,9 @@
   END;
   
   table_config = '{
-    "dom":"t",
-    "order":[[0,"asc"]],
-    "language":{},
+    "dom": "' _ ( table_dom || '' ) _ '",
+    "order":[' _ ( table_order || '[0,"asc"]' ) _ '],
+    "language": ' _ ( table_language || '{"emptyTable": "There is no data available in this table"}' ) _ ',
     "responsive":{
       "details":{"type":"column","target":-1}
     },
@@ -71,14 +82,14 @@
     "columns":[
       _COLUMNS
       _BUTTONS
-      {"orderable":false, "className":"dtr-control","targets":-1}
+      {"name":"Toggle child row","orderable":false,"className":"dtr-control data-table__header--invisible","targets":-1}
     ]
   }';
 
   table_config = table_config.replace('_COLUMNS', columnConfig);
   table_config = table_config.replace('_BUTTONS', buttonConfig);
 %]
-<table class="data-table table" width="100%" data-config='[% table_config %]'>
+<table class="data-table table [% table_class %]" width="100%" data-config='[% table_config %]'>
   <thead>
     [% INCLUDE tables/basic_row.tt row=header_row %]
   </thead>
