--- a/views/user/user_edit.tt
+++ b/views/user/user_edit.tt
@@ -1,31 +1,22 @@
-[% IF edit.defined %]
-[% edituser = users.shift %]
-[% END %]
-<div class="content-block__head row">
-  <div class="content-block__info col-lg-6">
-    <h2 class="content-block__title">
-      My Details
-    </h2>
-    
-    <div class="content-block__intro">
-      This is your profile, here you can change your personal details and password.
-    </div>
-  </div>
-</div>
-
+[%-
+  INCLUDE navigation/header_simple_back_button.tt
+    back_button_url = url.page _ "/user_overview/"
+    back_button_title = "Edit user: " _ edituser.firstname _ " " _ edituser.surname
+    content_intro = "In this window you can edit a user in the system.";
+-%]
 <div class="content-block__main">
-  <form method="post">
+  <form method="post" action="">
     <fieldset class="fieldset">
       <legend class="fieldset__legend fieldset__legend--hidden">My details</legend>
       <input type="hidden" name="csrf_token" value="[% csrf_token %]">
       <input type="hidden" name="page" value="[% page %]">
-      <input type="hidden" name="username" value="[% edituser.username | html_entity %]">
+      <input type="hidden" name="username" value="[% user.username | html_entity %]">
       <input type="hidden" name="id" value="[% edituser.id %]">
       [% field_counter = 0 %]
       [% IF site.user_fields.size > 0 %]
       <div class="row">
-      [% END %]
-      [% FOREACH field IN site.user_fields %]
+        [% END %]
+        [% FOREACH field IN site.user_fields %]
         [% IF field_counter > 0 AND field_counter % 2 == 0 %]
       </div>
       <div class="row">
@@ -33,18 +24,6 @@
         [% field_disabled = NOT field.editable ? 1 : 0; %]
         <div class="col-lg-5">
           [%
-            IF field.name == "email";
-              field_type = "email";
-              sub_field  = "fields/sub/modal_link.tt";
-              sub_params = {
-                label => "Change password"
-              };
-            ELSE;
-              field_type = "text";
-              sub_field  = "";
-              sub_params = {};
-            END;
-          
             IF field.type == "freetext";
               INCLUDE fields/input.tt
                 id = field.name
@@ -52,12 +31,12 @@
                 value = edituser.${field.name}
                 label = field.description
                 placeholder = field.placeholder
-                type = field_type
+                type = "text"
                 disabled = field_disabled
                 is_html = 1
-                sub_field = sub_field
-                sub_params = sub_params;
-          
+                sub_field = ""
+                sub_params = {};
+            
             ELSIF field.type == "dropdown";
               INCLUDE fields/select.tt
                 id = field.name
@@ -67,25 +46,28 @@
                 placeholder = field.placeholder
                 items = values.${field.name}
                 is_html = 1
-                sub_field = sub_field
-                sub_params = sub_params;
+                sub_field = ""
+                sub_params = {};
             END;
           %]
         </div>
         [% IF field.name == "email"; field_counter = field_counter + 2; ELSE; field_counter = field_counter + 1; END; %]
-      [% END %]
-      [% IF site.user_fields.size > 0 %]
+        [% END %]
+        [% IF site.user_fields.size > 0 %]
       </div>
       [% END %]
       
-      <button
-        type="submit"
-        name="submit"
-        value="1"
-        class="btn btn-default"
-      >
-        <span class="btn__title">Save</span>
-      </button>
     </fieldset>
+  
+    <div class="row">
+      [%-
+        INCLUDE snippets/user_column_permissions.tt column_class="col-lg-5 mb-4 mb-lg-0" list_class=" list--vertical list--checkboxes";
+        INCLUDE snippets/user_column_groups.tt column_class="col-lg-5" list_class=" list--vertical list--checkboxes";
+      -%]
+    </div>
+    [%-
+      back_url = url.page _ "/user_overview/";
+      INCLUDE navigation/button_bar.tt back_url=back_url submit_name="submit";
+    -%]
   </form>
 </div>
