--- a/views/user/user_edit.tt
+++ b/views/user/user_edit.tt
@@ -1,8 +1,9 @@
 [%-
-  INCLUDE navigation/header_simple_back_button.tt
-    back_button_url = url.page _ "/user_overview/"
-    back_button_title = "Edit user: " _ edituser.firstname _ " " _ edituser.surname
-    content_intro = "In this window you can edit a user in the system.";
+  # add standardized page header
+  INCLUDE layouts/page_header.tt
+    title       = "Edit user: " _ edituser.firstname _ " " _ edituser.surname
+    description = "In this window you can edit a user in the system."
+    back_button = { url = url.page _ "/user_overview/" };
 -%]
 <div class="content-block__main">
   <form method="post" action="">
