--- a/views/user/user_overview.tt
+++ b/views/user/user_overview.tt
@@ -1,8 +1,8 @@
 [%
   # prepare table config
-  table_class = 'table-striped table-hover';
-  table_dom = '<\"row row--header\"<\"col\"f><\"col-lg-auto dataTables_length_wrapper\"l>><\"row row--main\"<\"col-sm-12\"tr>><\"row row--footer\"<\"col-sm-12 col-lg-6\"p><\"col-sm-12 col-lg-6 dataTables_info_wrapper\"i>>';
-  table_order = '[0,"asc"]';
+  table_class    = 'table-striped table-hover';
+  table_dom      = '<\"row row--header\"<\"col\"f><\"col-lg-auto dataTables_length_wrapper\"l>><\"row row--main\"<\"col-sm-12\"tr>><\"row row--footer\"<\"col-sm-12 col-lg-6\"p><\"col-sm-12 col-lg-6 dataTables_info_wrapper\"i>>';
+  table_order    = '[0,"asc"]';
   table_language = '{"emptyTable": "There is no data available in this table","lengthMenu":"Rows per page _MENU_","paginate":{"next":"Next page","previous":"Previous page"},"search":"","searchPlaceholder":"Search through your users"}';
 
   table_columns = [{
@@ -156,46 +156,33 @@
 
     rows.push(row);
   END;
+
+  # add standardized page header
+  INCLUDE layouts/page_header.tt
+    title         = "Users"
+    description   = "This is an overview of all the users within your Linkspace system."
+    aside_buttons = ! user.permission.useradmin ? [] : [{
+      type   = "modal_button"
+      target = "#emailUser"
+      class  = "btn-email"
+      label  = "Email users"
+    }, {
+      type   = "link"
+      target = url.page _ "/user_upload/"
+      class  = "btn-import"
+      label  = "Import users"
+    }, {
+      type   = "link"
+      target = url.page _ "/user_export/"
+      class  = "btn-export"
+      label  = "Export users"
+    }, {
+      type   = "modal_button"
+      target = "#userModal"
+      class  = "btn-add"
+      label  = "Add a user"
+    }];
 %]
-<div class="content-block__head row">
-  <div class="content-block__info col-lg-6">
-    <h2 class="content-block__title">
-      Users
-    </h2>
-    
-    <div class="content-block__intro">
-      This is an overview of all the users within your Linkspace system.
-    </div>
-  </div>
-  
-  <div class="content-block__aside col-lg-6">
-    [% IF user.permission.useradmin %]
-    <div class="list list--horizontal list--no-borders list--buttons">
-      <ul class="list__items">
-        
-        <li class="list__item">
-          <a href="[% url.page %]/user_upload/" class="btn btn-import">Import users</a>
-        </li>
-        
-        <li class="list__item">
-          <a href="[% url.page %]/user_export/" class="btn btn-export">Export users</a>
-        </li>
-        
-        <li class="list__item">
-          <button
-            type="button"
-            class="btn btn-add"
-            data-toggle="modal"
-            data-target=#userModal
-          >
-            <span class="btn__title">Add a user</span>
-          </button>
-        </li>
-      </ul>
-    </div>
-    [% END %]
-  </div>
-</div>
 
 <div class="content-block__main">
   <div class="row mb-4">
