Convert is_html field flag to use standardized filtering

--- a/views/fields/password.tt
+++ b/views/fields/password.tt
@@ -1,5 +1,5 @@
 [%
-  # Template for standardized <input type="password"> fields
+  # Template for standardized input type="password"
   # Implementation Example:
   #
   # INCLUDE fields/password.tt
@@ -13,7 +13,7 @@
   #   input_class = "input--password"
   #   popover_body="this is a popover, that is displayed when the info icon is pressed"
   #   is_required = 0
-  #   is_html = 0
+  #   filter = "html" | "html_entity" | ""
   #   tabindex = 3
   #   sub_field = "fields/sub/link.tt"
   #   sub_params = {
@@ -21,7 +21,8 @@
   #     label => "Reset password"
   #   };
 
-  input_class = is_required AND ! input_class.match('input--required') ? input_class _ ' input--required' : input_class;
+  input_class  = is_required AND ! input_class.match('input--required') ? input_class _ ' input--required' : input_class;
+  autocomplete = autocomplete ? 1 : 0;
 %]
 [% IF ! hide_group %]
 <div class="form-group">
@@ -29,7 +30,7 @@
   <div class="input [% input_class %]">
     <div class="input__label">
       <label for="[% id %]">
-        [% IF is_html; label | html; ELSE; label; END; %]
+        [% INCLUDE fields/sub/filter.tt value=label; %]
       </label>
       [% IF popover_body; INCLUDE fields/sub/popover.tt popover_id=id popover_body=popover_body; END; %]
     </div>
@@ -44,8 +45,9 @@
         class="form-control [% custom_classes %]"
         id="[% id %]"
         name="[% name %]"
-        placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"
-        value="[% value %]"[% IF tabindex %]
+        placeholder="[% INCLUDE fields/sub/filter.tt value=placeholder; %]"
+        value="[% value %]"[% IF ! autocomplete %]
+        autocomplete="off"[% END %][% IF tabindex %]
         tabindex="[% tabindex %]"[% END %][% IF help_text %]
         aria-describedby="[% id %]-help"[% END %][% IF is_disabled %]
         disabled[% END %][% IF is_required %]
