--- a/views/user/my_account.tt
+++ b/views/user/my_account.tt
@@ -45,7 +45,7 @@
                 placeholder = field.placeholder
                 type = field_type
                 disabled = field_disabled
-                is_html = 1
+                filter = "html"
                 sub_field = sub_field
                 sub_params = sub_params;
           
@@ -57,7 +57,7 @@
                 label = field.description
                 placeholder = field.placeholder
                 items = values.${field.name}
-                is_html = 1
+                filter = "html"
                 sub_field = sub_field
                 sub_params = sub_params;
             END;
