Standardized hidden fields

--- a/views/layouts/page_header.tt
+++ b/views/layouts/page_header.tt
@@ -52,7 +52,7 @@
               button.class = button.class ? button.class : "btn-default";
           -%]
           <form method="[% button.method %]" action="[% button.target %]">
-            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+            [% INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token; %]
             <button
               type="submit"
               class="btn [% button.class %]"
