--- a/views/register.tt
+++ b/views/register.tt
@@ -19,8 +19,9 @@
       <legend class="fieldset__legend fieldset__legend--hidden">
         Request account
       </legend>
-      <input type="hidden" name="csrf_token" value="[% csrf_token %]">
       [%
+        INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token;
+      
         INCLUDE fields/input.tt
           id = "firstname"
           name = "firstname"
