--- a/views/reset_password_mail_landing.tt
+++ b/views/reset_password_mail_landing.tt
@@ -9,7 +9,7 @@
     </div>
   </div>
   
-  <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+  [% INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token; %]
   
   <div class="login__btns">
     <button type="submit" name="execute_reset" value="1" class="btn btn-default">
