--- a/views/reset_password_request.tt
+++ b/views/reset_password_request.tt
@@ -16,8 +16,9 @@
       <legend class="fieldset__legend fieldset__legend--hidden">
         Reset password
       </legend>
-      <input type="hidden" name="csrf_token" value="[% csrf_token %]">
       [%
+        INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token;
+      
         INCLUDE fields/input.tt
           id = "emailreset"
           name = "emailreset"
