--- a/views/user/user_export.tt
+++ b/views/user/user_export.tt
@@ -71,7 +71,7 @@
   <div class="row justify-content-end">
     <div class="col-auto">
       <form method="post">
-        <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+        [% INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token; %]
         <button
           type="submit"
           class="btn btn-delete btn-small btn-icon-close"
