--- a/views/wizard/delete_file.tt
+++ b/views/wizard/delete_file.tt
@@ -13,6 +13,7 @@
       </div>
       
       <form method="post">
+        [% INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token; %]
         <div class="modal-frame" >
           <div class="modal-body">
             <p>Are you sure you want to delete this file? You cannot undo this step.</p>
